--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 description = "Aggregator for foundry blockchain course challenges"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = ["eth-brownie==1.19.3"]
+dependencies = ["eth-brownie==1.19.3", "web3==5.31.3"]
 
 
 [build-system]
