--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "foundry-simple-storage"]
 	path = foundry-simple-storage
 	url = https://github.com/tmpoe/foundry-simple-storage.git
+[submodule "foundry-fund-me"]
+	path = foundry-fund-me
+	url = https://github.com/tmpoe/foundry-fund-me.git
