--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "foundry-defi-stablecoin"]
+	path = foundry-defi-stablecoin
+	url = https://github.com/tmpoe/foundry-defi-stablecoin
